[FIX] web_enterprise: chatter in form *sheet*
There is currently a case where the chatter is put inside the form sheet
itself (the channel form view) (see https://github.com/odoo/odoo/commit/4ebf4419a10c39ed47762c546f2f46f51a03ecd1).
In that case, the chatter overflowed the sheet. The bug is present since
9.0 but is only really noticeable since the new 11.0 design so it is
only fixed there.

(opw-1819038)

--- a/web_enterprise/static/src/less/form_view.less
+++ b/web_enterprise/static/src/less/form_view.less
@@ -275,7 +275,7 @@
     }
 
     // Chatter
-    .oe_chatter {
+    > .oe_chatter {
         .o-flex(1000, 0, auto);
         .container;
         padding: @grid-gutter-width*0.25 0;
